# Lithium-player

./: .editorconfig  .gitignore  LICENSE  README.md  docker-compose-dev.yml  docker-compose.yml  nginx.conf  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yaml
backend/: Dockerfile  dev.Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/auth/: __init__.py  auth.py  modal.py
backend/src/core/: animeparser.py  filenameparse.py  fileparser.py  logger.py  makehls.py  movieparser.py  musiclyrics.py  musicparser.py  musicstream.py  processmanager.py  setting.py  syncfile.py
backend/src/db/: __init__.py  lithium_db.py
backend/src/models/: __init__.py  common.py  file.py  music.py  user.py  video.py
backend/src/routers/: auth.py  authr.py  file.py  playlist.py  setting.py  stream.py  user.py  video.py
frontend/: pnpm-lock.yaml
frontend/desktop/: package.json  svelte.config.js  tailwind.config.js  tailwind.config.ts
frontend/desktop/src/routes/: +layout.svelte
frontend/web/: Dockerfile  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/web/src/: app.html
frontend/web/src/lib/: api.ts  types.ts  util.ts
frontend/web/src/lib/components/: Filepreview.svelte  lyrics.svelte  musicplayer.svelte  navbar.svelte  sidebar.svelte
frontend/web/src/lib/image/: album.svelte  cd.svelte
frontend/web/src/lib/init/: playerlist.ts  store.ts  types.ts
frontend/web/src/lib/stores/: player.ts  playerlist.ts
frontend/web/src/lib/utils/: lyrics.ts
frontend/web/src/routes/: +error.svelte  +page.svelte
frontend/web/src/routes/app/: +layout.server.ts  +layout.svelte  (+2 more)
install/ubuntu/: install.sh
(+24 files in other folders)
