[tool.poetry]
name = "lithium-backend"
version = "0.0.1"
description = ""
authors = ["phillychi3 <phillychi3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pydantic = "^2.10.2"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
