[tool.poetry]
name = "lithium-backend"
version = "0.0.1"
description = ""
authors = ["phillychi3 <phillychi3@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pydantic = "^2.10.2"
sqlmodel = "^0.0.22"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
av = "^13.1.0"
tinytag = "^2.0.0"
psycopg2 = "^2.9.10"
requests = "^2.32.3"
bcrypt = "^4.2.1"
pillow = "^11.0.0"
ebooklib = "^0.18"
mobi-python = "^0.0.1"
colorlog = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
